--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Ignore Folders
+PostgreSQL/_dev/
+PythonModule/DBConnect-Package/dist/
+PythonModule/DBConnect-Package/pg_dbconnect.egg-info/
+PythonModule/tests/
+
+# Ignore File
+PythonModule/DBConnect-Package/dev_notes.txt
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
